--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-      push-store-image:
+      push-image:
         runs-on: ubuntu-latest
         defaults:
           run:
